--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@
   --container-color: #efe8e0;
   --container-color-alt: #fff;
   --border-color: #e5e5e5;
+  --header-color: #fff;
 
   /*========== Font and typography ==========*/
   /*.5rem = 8px | 1rem = 16px ...*/
@@ -66,6 +67,25 @@ h4 {
   color: var(--title-color);
   font-family: "DidotLTW01-Roman";
   font-weight: var(--font-normal);
+}
+/*========== Variables Dark theme ==========*/
+body.dark-theme {
+  --first-color: #b89877;
+  --title-color: hsl(0, 0%, 95%);
+  --text-color: hsl(0, 0%, 75%);
+  --body-color: hsl(0, 0%, 12%);
+  --container-color: hsl(0, 1%, 46%);
+  --header-color: hsl(0, 0%, 12%);
+}
+.dark-theme .contact-submit {
+  color: #fff;
+  border-color: #fff;
+}
+
+/* CHANGE THEME */
+.change-theme {
+  line-height: 45px;
+  cursor: pointer;
 }
 /* REUSED CLASSES */
 body {
@@ -123,7 +143,7 @@ body {
 }
 .header-content {
   padding: 0 60px;
-  background-color: var(--container-color-alt);
+  background-color: var(--header-color);
 }
 /* NAVBAR */
 nav .nav-item {
@@ -149,7 +169,13 @@ nav .nav-item {
   justify-content: center;
   width: 100%;
 }
-
+.header .nav-link {
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  display: -webkit-box;
+}
 .nav-link i {
   font-size: 10px;
   padding: 0px 5px;
@@ -166,12 +192,20 @@ nav .nav-item {
   font-size: 30px;
   justify-content: flex-end;
 }
+
 .nav-logo {
-  width: 100%;
+  width: 200px;
   height: 90px;
   display: flex;
   align-items: center;
   justify-content: center;
+  background-image: url("../img/logo.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+.nav-logo-invert {
+  background-image: url("../img/logo-invert.png");
 }
 nav .nav-item:hover > .dropdown-menu {
   margin-top: 0;
@@ -196,10 +230,15 @@ nav .nav-item:hover > .dropdown-menu {
   display: block;
   transition: 0.3s;
   opacity: 0;
+  background-color: var(--container-color);
 }
 
 .nav-search {
   position: relative;
+  height: fit-content;
+}
+.nav-search i {
+  line-height: 45px;
 }
 .nav-search:hover .search-box {
   opacity: 1;
@@ -231,6 +270,7 @@ nav .nav-item:hover > .dropdown-menu {
 }
 .nav-shop {
   position: relative;
+  cursor: pointer;
 }
 
 .cart-items {
@@ -303,7 +343,7 @@ nav .nav-item:hover > .dropdown-menu {
   background-color: var(--container-color);
   padding: 0.75rem 1.25rem;
   border: 1px solid var(--border-color);
-  height: 100%;
+  height: fit-content;
 }
 
 .cart__img {
@@ -341,7 +381,6 @@ nav .nav-item:hover > .dropdown-menu {
   padding: 0.25rem;
   background-color: var(--container-color);
   border: 1px solid var(--border-color);
-  cursor: pointer;
 }
 
 .cart__amount-trash {
@@ -434,7 +473,7 @@ nav .nav-item:hover > .dropdown-menu {
 .button:hover {
   background-color: var(--first-color);
   transition: 0.3s;
-  border: none;
+  border-color: var(--first-color);
 }
 
 /* SERVICE */
@@ -560,6 +599,13 @@ nav .nav-item:hover > .dropdown-menu {
   justify-content: center;
   background-color: var(--container-color);
   transition: 0.3s;
+  color: var(--title-color);
+}
+.bag-btn::before {
+  content: "\f07a";
+  font-family: "Font Awesome 6 Free";
+  font-weight: 900;
+  font-size: 16px;
 }
 .pd-hover-btn:hover {
   background-color: var(--first-color);
@@ -590,6 +636,7 @@ nav .nav-item:hover > .dropdown-menu {
   margin: 10px 0;
   transition: 0.3s;
   text-align: center;
+  font-family: Cormorant;
 }
 
 .pd-title:hover {
@@ -601,10 +648,10 @@ nav .nav-item:hover > .dropdown-menu {
   font-weight: var(--font-medium);
   margin-bottom: 20px;
 }
-.sale-price {
+#sale {
   color: red;
 }
-.old-price {
+#sale span {
   font-size: 14px;
   line-height: 24px;
   color: var(--text-color);
@@ -630,7 +677,8 @@ nav .nav-item:hover > .dropdown-menu {
   text-transform: uppercase;
 }
 .nav-pills .nav-link:hover {
-  background-color: #fff;
+  background-color: var(--first-color);
+  color: #fff;
 }
 .nav-pills .nav-link.active {
   background-color: var(--first-color);
@@ -714,7 +762,7 @@ nav .nav-item:hover > .dropdown-menu {
 }
 .testimonial-item {
   padding: 55px 40px;
-  background-color: var(--container-color-alt);
+  background-color: var(--container-color);
 }
 
 .testimonial-content {
@@ -837,7 +885,7 @@ nav .nav-item:hover > .dropdown-menu {
   font-size: 20px;
 }
 
-.contact-icon {
+.footer-contact .contact-icon {
   font-size: 20px;
   padding-right: 15px;
 }
@@ -976,6 +1024,11 @@ nav .nav-item:hover > .dropdown-menu {
 .pd-swiper .swiper-button-prev::after {
   font-size: 12px;
 }
+
+.pd-swiper .swiper-slide-thumb-active {
+  border: 2px solid var(--first-color);
+}
+
 .pd-details-content {
   display: flex;
   flex-direction: column;
@@ -1030,6 +1083,11 @@ nav .nav-item:hover > .dropdown-menu {
 .pd-details-option-color-container li {
   border: 2px solid transparent;
   border-radius: 2px;
+  transition: 0.3s;
+}
+
+.pd-details-option-color-container li:hover {
+  border-color: #ccc;
 }
 .pd-details-option-color-container {
   align-items: center;
@@ -1051,13 +1109,15 @@ nav .nav-item:hover > .dropdown-menu {
   border-color: #000 !important;
 }
 
-.pd-details-option-size input {
+.pd-details-option-size input,
+.comment-form-checkbox input {
   position: absolute;
   opacity: 0;
   cursor: pointer;
   height: 0;
   width: 0;
 }
+.comment-form-checkbox,
 .pd-details-option-size {
   display: block;
   position: relative;
@@ -1069,6 +1129,7 @@ nav .nav-item:hover > .dropdown-menu {
   margin-right: 32px;
 }
 
+.comment-form-checkbox .checkmark::after,
 .pd-details-option-size .checkmark::after {
   content: "";
   position: absolute;
@@ -1084,7 +1145,7 @@ nav .nav-item:hover > .dropdown-menu {
   transform: rotate(45deg);
 }
 
-.pd-details-option-size .checkmark {
+.checkmark {
   position: absolute;
   top: 5px;
   left: 0;
@@ -1094,11 +1155,11 @@ nav .nav-item:hover > .dropdown-menu {
   border: 1px solid #252525;
   border-radius: 2px;
 }
-.pd-details-option-size input:checked ~ .checkmark {
+input:checked ~ .checkmark {
   background-color: transparent;
 }
 
-.pd-details-option-size input:checked ~ .checkmark::after {
+input:checked ~ .checkmark::after {
   display: block;
 }
 
@@ -1113,6 +1174,7 @@ nav .nav-item:hover > .dropdown-menu {
 }
 .black-btn:hover {
   color: #fff;
+  border-color: transparent;
 }
 
 .quantity-counter {
@@ -1144,7 +1206,7 @@ nav .nav-item:hover > .dropdown-menu {
 
 .pd-details-info span {
   font-size: var(--small-font-size);
-  color: #000;
+  color: var(--title-color);
   font-weight: var(--font-bold);
 }
 
@@ -1182,7 +1244,7 @@ nav .nav-item:hover > .dropdown-menu {
   font-size: var(--smaller-font-size);
   line-height: 26px;
 }
-.pd-desc p {
+#desc-content p {
   margin: 15px 0;
 }
 
@@ -1219,6 +1281,164 @@ nav .nav-item:hover > .dropdown-menu {
   border: 1px solid #d2d1d1;
 }
 
+.pd-details-info-container {
+  display: grid;
+  grid-template-columns: 150px 1fr;
+  gap: 3px;
+}
+
+.pd-details-info-title {
+  padding: 10px 20px;
+  font-size: 17px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #d2d1d1;
+}
+.pd-details-info-text {
+  padding: 10px 20px;
+  font-style: italic;
+  border: 1px solid #d2d1d1;
+}
+
+/* review */
+.pd-details-review-title {
+  font-size: 22px;
+  margin-bottom: 15px;
+}
+
+.pd-details-review-comment {
+  display: flex;
+  gap: 20px;
+  margin-bottom: 20px;
+}
+.comment-content {
+  padding: 15px;
+  border: 1px solid #d2d1d1;
+  width: 100%;
+}
+.comment-avatar img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  margin-top: 10px;
+}
+.required {
+  color: crimson;
+}
+
+.comment-name {
+  font-weight: 500;
+  color: var(--title-color);
+  margin-bottom: 15px;
+}
+
+.comment-name span {
+  font-weight: 400;
+}
+.comment-form {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+.comment-note {
+  font-size: 12px;
+  font-style: italic;
+}
+
+/* .comment-rating {
+  display: flex;
+  color: #fec42d;
+  gap: 7px;
+  cursor: pointer;
+}
+
+
+.comment-rating li:hover a::before {
+  font-weight: 900;
+}
+
+.comment-rating a::before {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 1em;
+  height: 1em;
+  line-height: 1;
+  content: "\f005";
+  text-indent: 0;
+  font-family: "Font Awesome 6 Free";
+}
+.comment-rating a {
+  position: relative;
+  height: 1em;
+  width: 1em;
+  text-indent: -999em;
+  display: inline-block;
+  text-decoration: none;
+  color: #ffc30e;
+  transition: 0.3s;
+}a
+.comment-rating i {
+  font-size: 12px;
+} */
+
+.comment-rating {
+  display: flex;
+  position: relative;
+  margin: 10px 0;
+  flex-direction: row-reverse;
+  justify-content: start;
+}
+
+.comment-rating input {
+  position: relative;
+  width: 15px;
+  height: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  -webkit-appearance: none;
+  appearance: none;
+}
+
+.comment-rating input::before {
+  font-family: "Font Awesome 6 Free";
+  content: "\f005";
+  position: absolute;
+  font-weight: 900;
+  font-size: 10px;
+  color: #e5e5e5;
+  transition: 0.3s;
+}
+.comment-rating input:checked ~ input::before,
+.comment-rating input:checked::before,
+.comment-rating input:hover ~ input::before,
+.comment-rating input:hover::before {
+  color: #fec42d;
+  transition: 0.3s;
+}
+
+.comment-form-comment textarea {
+  width: 100%;
+  border: 1px solid #e5e5e5;
+  outline: none;
+  padding-left: 10px;
+  padding-top: 10px;
+}
+.comment-form-author input,
+.comment-form-email input {
+  border: 1px solid #e5e5e5;
+  line-height: 40px;
+  padding-left: 10px;
+}
+
+.comment-form-checkbox {
+  font-size: 12px;
+}
+
 /*=============== CATEGORIES ===============*/
 .category-container {
   margin-top: 100px;
@@ -1229,13 +1449,19 @@ nav .nav-item:hover > .dropdown-menu {
   grid-template-columns: repeat(1, 1fr);
   row-gap: 30px;
 }
+.sidebar-close-btn {
+  background-color: transparent;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  opacity: 0;
+}
 
 .cate-sidebar-item {
   display: flex;
   flex-direction: column;
   background-color: var(--container-color-alt);
   padding: 5px;
-  gap: 20px;
 }
 
 .cate-sidebar-item-title {
@@ -1249,18 +1475,151 @@ nav .nav-item:hover > .dropdown-menu {
   display: flex;
   flex-direction: column;
   gap: 5px;
-  padding-left: 7px;
-  margin-bottom: 20px;
 }
 
 .cate-sidebar-item-link {
+  text-transform: capitalize;
+  background-color: transparent;
   font-size: var(--smaller-font-size);
+  color: var(--text-color);
   transition: 0.3s;
 }
 
 .cate-sidebar-item-link:hover {
   color: var(--first-color);
   text-decoration: underline;
+}
+
+.cate-sidebar-item-data {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding-left: 7px;
+}
+.sidebar-pd {
+  overflow-y: scroll !important;
+}
+.sidebar-pd-list {
+  gap: 12px;
+  height: 350px;
+}
+
+.sidebar-pd-item {
+  display: flex;
+  gap: 10px;
+  height: fit-content !important;
+}
+
+.sidebar-pd-item img {
+  width: 80px;
+  height: 80px;
+}
+
+.sidebar-pd-item h4 {
+  font-size: 18px;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 1;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+.sidebar-pd-item p {
+  font-weight: var(--font-bold);
+  font-size: var(--smaller-font-size);
+  color: var(--title-color);
+  margin-top: 20px;
+}
+.cate-sidebar-banner {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  align-items: center;
+  background-color: var(--first-color);
+  padding-bottom: 20px;
+  margin-bottom: 50px;
+  text-align: center;
+}
+.cate-sidebar-banner img {
+  width: 100%;
+  opacity: 0;
+  transition: 0.3s;
+  animation: sidebar-banner-img 10s linear infinite;
+}
+
+.cate-sidebar-banner p {
+  text-transform: uppercase;
+  color: #fff;
+  font-size: var(--smaller-font-size);
+  opacity: 0;
+  transition: 0.3s;
+  animation: sidebar-banner-p 10s linear infinite;
+}
+
+.cate-sidebar-banner h4 {
+  color: #fff;
+  font-size: 24px;
+  opacity: 0;
+  transition: 0.3s;
+  animation: sidebar-banner-title 10s linear infinite;
+}
+/* CATEGORIES PRODUCT */
+.cat-pd-container {
+  margin-bottom: 100px;
+}
+.cat-pd-container .pd-title {
+  font-size: 20px;
+}
+.cat-pd-container .nav-pills {
+  justify-content: start;
+  margin-left: 24px;
+}
+.cat-pd-container .nav-link {
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  line-height: 50px;
+}
+.cat-pd-container .nav-link i {
+  font-size: 20px;
+}
+#grid-view-tab {
+  transform: rotate(90deg);
+}
+.list-view-pd-item {
+  margin-bottom: 20px;
+}
+.list-view-pd-item:hover .pd-hover {
+  opacity: 1;
+  transition: 0.5s;
+}
+.list-view-pd-item .pd-hover {
+  padding: 12px;
+  padding-top: 0;
+}
+.list-view-pd-item .pd-hover-btns {
+  bottom: 22px;
+}
+
+.list-view-pd-item .pd-title {
+  text-align: left;
+  font-size: 24px;
+}
+
+.list-view-pd-item .pd-item-rating {
+  position: relative;
+  bottom: initial;
+  justify-content: start;
+}
+
+.list-view-pd-item .pd-item-rating i {
+  font-size: var(--smaller-font-size);
+}
+.list-view-pd-item .pd-price {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.list-view-pd-item .pd-text {
+  font-size: var(--small-font-size);
 }
 
 /*=============== ABOUT US ===============*/
@@ -1351,6 +1710,106 @@ nav .nav-item:hover > .dropdown-menu {
 .gold {
   color: #967c60;
 }
+
+/*=============== CONTACT ===============*/
+.contact-container {
+  padding-bottom: 100px;
+  padding-top: 100px;
+}
+.contact-title {
+  font-size: 35px;
+  text-align: center;
+  margin-bottom: 30px;
+}
+.contact-subtitle {
+  font-size: 14px;
+  text-align: center;
+  margin-bottom: 50px;
+}
+.contact-content {
+  border: 1px solid #e5e5e5;
+}
+.contact-left,
+.contact-right {
+  padding: 30px;
+}
+.contact-left {
+  border-right: 1px solid #e5e5e5;
+}
+.contact-left-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+.contact-item {
+  display: flex;
+  width: 100%;
+  padding-bottom: 30px;
+  margin: 0 50px 20px 50px;
+  align-items: center;
+  border-bottom: 1px solid #e5e5e5;
+}
+.contact-item .contact-icon {
+  font-size: 40px;
+  padding-right: 25px;
+  width: 60px;
+  height: 60px;
+  color: #aaa;
+}
+.contact-item h4 {
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+.contact-item span {
+  font-size: 14px;
+}
+.contact-item:last-child {
+  border: none;
+}
+
+.contact-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 20px;
+}
+.contact-form-item {
+  width: 100%;
+}
+
+.contact-form p {
+  font-size: var(--smaller-font-size);
+  margin-bottom: 5px;
+}
+
+.contact-form input {
+  width: 100%;
+  height: 40px;
+  padding: 7px;
+  border: 1px solid #e5e5e5;
+}
+
+.contact-form textarea {
+  border: 1px solid #e5e5e5;
+  outline: none;
+  width: 100%;
+}
+
+/*=============== MAP ===============*/
+.responsive-map {
+  overflow: hidden;
+  position: relative;
+  height: 600px;
+}
+.responsive-map iframe {
+  left: 0;
+  top: 0;
+  height: 600px;
+  width: 100%;
+  position: absolute;
+}
 /*=============== SCROLL UP ===============*/
 .scrollup {
   position: fixed;
@@ -1382,9 +1841,37 @@ nav .nav-item:hover > .dropdown-menu {
 .show-scrollup {
   opacity: 0.8;
 }
+/*=============== STICKY SIDEBAR ===============*/
+.sidebar-btn {
+  position: fixed;
+  left: 0rem;
+  top: 10rem;
+  background-color: var(--first-color);
+  box-shadow: 0 4px 12px hsla(0, 0%, 20%, 0.1);
+  display: inline-flex;
+  padding: 0.5rem;
+  z-index: var(--z-tooltip);
+  opacity: 0;
+  transition: 0.4s;
+}
+.sidebar-btn i {
+  color: #fff;
+  font-size: 1.25rem;
+}
+
+.sidebar-btn:hover {
+  background-color: #e2d2b1;
+}
+
+.sidebar-btn:hover i {
+  color: var(--first-color);
+}
+.show-sidebar {
+  left: 0 !important;
+}
 /*=============== SCROLL BAR ===============*/
 ::-webkit-scrollbar {
-  width: 0.6rem;
+  width: 0.3rem;
   background-color: hsl(0, 0%, 74%);
   height: 0.3rem;
 }
@@ -1400,7 +1887,7 @@ nav .nav-item:hover > .dropdown-menu {
 @media screen and (max-width: 1400px) {
 }
 @media screen and (max-width: 1200px) {
-  .nav-logo img {
+  .nav-logo {
     width: 150px;
   }
   .caption-title {
@@ -1489,6 +1976,28 @@ nav .nav-item:hover > .dropdown-menu {
   .achievement-data {
     padding: 0;
   }
+
+  .cate-sidebar {
+    position: fixed;
+    top: 130px;
+    z-index: 100;
+    background-color: #fff;
+    width: 300px;
+    box-shadow: 2px 0 8px hsla(0, 0%, 15%, 0.1);
+    padding-top: 40px;
+    left: -100%;
+    overflow: auto;
+    height: 600px;
+    transition: 0.4s;
+  }
+
+  .sidebar-close-btn {
+    opacity: 1;
+  }
+
+  .sidebar-btn {
+    opacity: 1;
+  }
 }
 @media screen and (max-width: 768px) {
   .section-title h1 {
@@ -1539,6 +2048,7 @@ nav .nav-item:hover > .dropdown-menu {
   .nav-btns {
     font-size: 25px;
     gap: 15px;
+    cursor: pointer;
   }
   .nav-logo {
     justify-content: start;
@@ -1574,6 +2084,9 @@ nav .nav-item:hover > .dropdown-menu {
   .pd-related-content .swiper-slide {
     display: flex;
     justify-content: center;
+  }
+  .contact-item:last-child {
+    border-bottom: 1px solid #e5e5e5;
   }
 }
 @media screen and (max-width: 576px) {
@@ -1633,5 +2146,49 @@ nav .nav-item:hover > .dropdown-menu {
   }
   .blog-content {
     padding: 50px;
+  }
+}
+
+@keyframes sidebar-banner-img {
+  0%,
+  5% {
+    opacity: 0;
+  }
+  8%,
+  90% {
+    opacity: 1;
+  }
+  93%,
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes sidebar-banner-p {
+  0%,
+  10% {
+    opacity: 0;
+  }
+  13%,
+  90% {
+    opacity: 1;
+  }
+  93%,
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes sidebar-banner-title {
+  0%,
+  15% {
+    opacity: 0;
+  }
+  18%,
+  90% {
+    opacity: 1;
+  }
+  93%,
+  100% {
+    opacity: 0;
   }
 }
